--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div id="memory-board">
     </div>
 
-    <script src="js/index.js" src="js/memory.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/memory.js"></script>
   </body>
 </html>
