--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
   <body>
     <div>
       <h1>Superhero Memory Game</h1>
+      
     </div>
     <div id="score">
       <h2>Score</h2>
       <p>Pairs clicked: <span id="pairs-clicked">0</span></p>
       <p>Pairs guessed: <span id="pairs-guessed">0</span></p>
     </div>
-    <div id="memory-board">
-    </div>
-
+    
+      <div id="memory-board">
+      </div>
+      <div class ="final-score"> <span>YOU WIN!</span></div>
+  
     <script type="text/javascript" src="js/memory.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
